# richc

./: .gitattributes  CLAUDE.md  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/richc/: CMakeLists.txt  arena.h  bitset.h  byte_array.h  bytes.h  debug.h  defines.h  file.h  hash.h  mstr.h  platform.h  str.h  template_util.h
include/richc/app/: CMakeLists.txt  app.h
include/richc/math/: CMakeLists.txt  aabb2f.h  aabb2i.h  array_box2i.h  bigint.h  box2f.h  box2i.h  mat22f.h  mat23f.h  mat33f.h  mat34f.h  mat44f.h  math.h  quat.h  quatf.h  rational.h  solve.h  vec2f.h  vec2i.h  vec3f.h  vec3i.h  vec4f.h
include/richc/template/: accumulate.h  all_of.h  any_of.h  array.h  find.h  hash_map.h  hash_multimap.h  hash_set.h  hash_trie.h  lower_bound.h  max_element.h  min_element.h  mismatch.h  none_of.h  remove.h  rotate.h  sort.h  transform.h  upper_bound.h
include/richc/templates/: CMakeLists.txt  array.h.template  hash_trie.h.template
include/richc/test/: CMakeLists.txt  test.h
samples/: CMakeLists.txt
samples/hello_triangle/: CMakeLists.txt  main.c
src/: CMakeLists.txt  arena.c  bitset.c  file.c  mstr.c  str.c
src/app/: CMakeLists.txt
src/app/sdl2/: CMakeLists.txt  app.c
src/app/x11/: CMakeLists.txt  app.c  opengl.c  opengl.h
src/gfx/: CMakeLists.txt
src/gfx/opengl/: CMakeLists.txt  opengl.c  opengl.h
src/math/: CMakeLists.txt  bigint.c  mat44f.c  rational.c  solve.c
src/os/: CMakeLists.txt
src/test/: CMakeLists.txt  test.c
test/: CMakeLists.txt  arena_tests.c  file_tests.c  main.c  str_tests.c  test.c
